--- a/sphere recon.ipynb
+++ b/sphere recon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2519,10 +2519,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<sacla.log at 0x7fc3783025c0>"
+       "<sacla.log at 0x7fd2c0401240>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2533,29 +2533,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "#to run: 97, 82, 83, 84, 87, 88, 93, 94\n",
     "samples=[\n",
     "     '10 mid',\n",
-    "     \n",
     "     'Fe Foil',\n",
     "    '51, 10 high',\n",
-    "#     '10 agar',\n",
-    "#     '10 low',\n",
-    "#    '5 mid',\n",
+    "    '10 agar',\n",
+    "    '10 low',\n",
+    "   '5 mid',\n",
     "   '20 mid',\n",
-    "#     '5 high',\n",
-    "#     '20nm high',\n",
+    "#    '5 high',\n",
+    "#    '20nm high',\n",
     " \n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#+1:ncpus=1:mem=1gb\n",
+    "#PBS -q psmall\n",
+    "def qsub(commands, jobname='script', start=0, end=0):\n",
+    "    '''\n",
+    "    submits a job (array) using max resources.\n",
+    "    if start==end submit single job, else array from start(inclusive) to end(inclusive)\n",
+    "    use $PBS_ARRAY_INDEX as argument to get index of job in array\n",
+    "    '''\n",
+    "    from subprocess import run, PIPE\n",
+    "\n",
+    "    if  isinstance(commands,list):\n",
+    "        commands='\\n'.join(str(c) for c in commands)\n",
+    "    pbs = (\n",
+    "f'''\n",
+    "#PBS -V\n",
+    "#PBS -l select=1:ncpus=12:mem=20gb\n",
+    "#PBS -l walltime=24:00:00\n",
+    "#PBS -k oe\n",
+    "#PBS -N {jobname}\n",
+    "'''\n",
+    "        + (f'#PBS -J {start}-{end}' if start != end else f'export PBS_ARRAY_INDEX={start}')\n",
+    "        + \n",
+    "f'''\n",
+    "{commands}\n",
+    "'''\n",
+    "    )\n",
+    "    #print(pbs)\n",
+    "    p = run(['qsub'], stdout=PIPE, input=pbs, encoding='ascii', cwd='./logs/')\n",
+    "    return (p.returncode, p.stdout)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2563,13 +2600,26 @@
      "output_type": "stream",
      "text": [
       "10 mid\n",
+      "(0, '1808365[].fep02-ib\\n')\n",
       "87\n",
       "Fe Foil\n",
       "skip 79\n",
+      "(0, '1808366[].fep02-ib\\n')\n",
       "80\n",
       "51, 10 high\n",
+      "(0, '1808367[].fep02-ib\\n')\n",
       "82\n",
+      "10 agar\n",
+      "(0, '1808368[].fep02-ib\\n')\n",
+      "97\n",
+      "10 low\n",
+      "(0, '1808369[].fep02-ib\\n')\n",
+      "93\n",
+      "5 mid\n",
+      "(0, '1808370[].fep02-ib\\n')\n",
+      "89\n",
       "20 mid\n",
+      "(0, '1808371[].fep02-ib\\n')\n",
       "91\n"
      ]
     }
@@ -2587,9 +2637,9 @@
     "        'hostname',\n",
     "        'echo $PBS_ARRAY_INDEX',\n",
     "        'cd /home/gorkhover/zimmf',\n",
-    "        f'python analysis2.py  /UserData/gorkhover/TAIS2019/$PBS_ARRAY_INDEX.h5 --workpath /work/gorkhover/zimmf/ --outpath /work/gorkhover/zimmf/weighted/ --delete --simple --ft3d --directrad 50 --allrad --normalize --run {run}'\n",
+    "        f'python analysis2.py  /UserData/gorkhover/TAIS2019/$PBS_ARRAY_INDEX.h5 --workpath /work/gorkhover/zimmf2/ --outpath /work/gorkhover/zimmf2/newmask/ --delete --simple --ft3d --directrad 75 --allrad --normalize --run {run}'\n",
     "    ]\n",
-    "    qsub(commands,f'{run}-pfingsten',runstart,runend)\n",
+    "    print(qsub(commands,f'{run}-MPInewmask',runstart,runend))\n",
     "    print(run)\n",
     "for sample in samples:\n",
     "    print(sample)\n",
@@ -3409,44 +3459,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " copying input to /work/gorkhover/zimmf/782533.h5\n",
+      " copying input to /work/gorkhover/zimmf2/782533.h5\n",
       "5000 images in input\n",
-      "{'inputfile': '/UserData/gorkhover/TAIS2019/782533.h5', 'outpath': '/work/gorkhover/tmp', 'workpath': '/work/gorkhover/zimmf', 'run': '', 'simple': True, 'ft3d': False, 'direct': False, 'directrad': 100, 'detector': 'detector_2d_3', 'energy': 6450, 'z': 10, 'photonsthreshold': 500, 'pixelsize': 50, 'maximg': 5, 'allimg': False, 'normalize': True, 'allrad': True}\n",
+      "{'inputfile': '/UserData/gorkhover/TAIS2019/782533.h5', 'outpath': '/work/gorkhover/zimmf2', 'workpath': '/work/gorkhover/zimmf2', 'run': '', 'simple': True, 'ft3d': False, 'direct': False, 'directrad': 100, 'detector': 'detector_2d_3', 'energy': 6450, 'z': 10, 'photonsthreshold': 500, 'pixelsize': 50, 'maximg': 5, 'normalize': True, 'allimg': False, 'allrad': True, 'delete': False}\n",
       "init done\n",
       "distance done, 3860 remaining\n",
       "background done\n",
       "intensity filter done, keep >8481.0 && <108443.0. 3782 remaining\n",
       "statistics done\n",
       "start recon...\n",
-      "analysis.py:146: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  photons = photonize(img, energy, detector.absolute_gain, bg) / meanphotons\n",
-      "analysis.py:146: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  photons = photonize(img, energy, detector.absolute_gain, bg) / meanphotons\n",
       "qmax: 100\n",
       "simple (2048, 1024)\n",
       "ft3d 0\n",
       "direct 0\n",
       "directrad (100,)\n",
-      "0 analysis.py:146: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  photons = photonize(img, energy, detector.absolute_gain, bg) / meanphotons\n",
-      "analysis.py:146: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  photons = photonize(img, energy, detector.absolute_gain, bg) / meanphotons\n",
-      "\n",
-      "start saving to /work/gorkhover/tmp/-782533-190528-082929.npz\n",
+      "0 \n",
+      "start saving to /work/gorkhover/zimmf2/-782533-190719-040159.npz\n",
       "done!\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "!python analysis.py  /UserData/gorkhover/TAIS2019/782533.h5 --workpath /work/gorkhover/zimmf/ --outpath /work/gorkhover/tmp/ --directrad 100 --simple --maximg 5 --normalize --allrad"
+    "!python analysis2.py  /UserData/gorkhover/TAIS2019/782533.h5 --workpath /work/gorkhover/zimmf2/ --outpath /work/gorkhover/zimmf2/ --directrad 100 --simple --maximg 5 --normalize --allrad"
    ]
   },
   {
