--- a/sphere_recon.ipynb
+++ b/sphere_recon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "99 -10700.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
     "    pbs = (\n",
     "f'''\n",
     "#PBS -V\n",
-    "#PBS -l select=1:ncpus=12:mem=20gb\n",
+    "#PBS -l select=1:ncpus=14:mem=20gb\n",
     "#PBS -l walltime=24:00:00\n",
     "#PBS -k oe\n",
     "#PBS -N {jobname}\n",
@@ -962,14 +962,22 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory `/work/gorkhover/zimmf/np/': File exists\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir /work/gorkhover/zimmf/np/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -977,26 +985,26 @@
      "output_type": "stream",
      "text": [
       "10 mid\n",
-      "(0, '1957937[].fep02-ib\\n')\n",
+      "(0, '1957960[].fep02-ib\\n')\n",
       "87\n",
       "Fe Foil\n",
       "skip 79\n",
-      "(0, '1957938[].fep02-ib\\n')\n",
+      "(0, '1957961[].fep02-ib\\n')\n",
       "80\n",
       "51, 10 high\n",
-      "(0, '1957939[].fep02-ib\\n')\n",
+      "(0, '1957962[].fep02-ib\\n')\n",
       "82\n",
       "10 agar\n",
-      "(0, '1957940[].fep02-ib\\n')\n",
+      "(0, '1957963[].fep02-ib\\n')\n",
       "97\n",
       "10 low\n",
-      "(0, '1957941[].fep02-ib\\n')\n",
+      "(0, '1957964[].fep02-ib\\n')\n",
       "93\n",
       "5 mid\n",
-      "(0, '1957942[].fep02-ib\\n')\n",
+      "(0, '1957965[].fep02-ib\\n')\n",
       "89\n",
       "20 mid\n",
-      "(0, '1957943[].fep02-ib\\n')\n",
+      "(0, '1957966[].fep02-ib\\n')\n",
       "91\n"
      ]
     }
@@ -1014,9 +1022,12 @@
     "        'hostname',\n",
     "        'echo $PBS_ARRAY_INDEX',\n",
     "        'cd /home/gorkhover/zimmf',\n",
-    "        f'python analysis2.py  /UserData/gorkhover/TAIS2019/$PBS_ARRAY_INDEX.h5 --workpath /work/gorkhover/zimmf/ --outpath /work/gorkhover/zimmf/np/ --delete --simple --directrad 75 --allrad --normalize --run {run}'\n",
+    "        'export NUMBA_NUM_THREADS=12',\n",
+    "        'export OMP_NUM_THREADS=12',\n",
+    "        'export MKL_NUM_THREADS=12',\n",
+    "        f'python analysis.py  /UserData/gorkhover/TAIS2019/$PBS_ARRAY_INDEX.h5 --workpath /work/gorkhover/zimmf/ --outpath /work/gorkhover/zimmf/np/ --delete --simple --directrad 50 --allrad --normalize --run {run}'\n",
     "    ]\n",
-    "    print(qsub(commands,f'{run}-MPInewmask',runstart,runend))\n",
+    "    print(qsub(commands,f'{run}-sphere',runstart,runend))\n",
     "    print(run)\n",
     "for sample in samples:\n",
     "    print(sample)\n",
@@ -1026,6 +1037,41 @@
     "    runs.apply(submit,axis=1)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "fep02-ib: \n",
+      "                                                            Req'd  Req'd   Elap\n",
+      "Job ID          Username Queue    Jobname    SessID NDS TSK Memory Time  S Time\n",
+      "--------------- -------- -------- ---------- ------ --- --- ------ ----- - -----\n",
+      "1957953[].fep02 gorkhove serial   87-sphere     --    1  14   20gb 24:00 B   -- \n",
+      "1957954[].fep02 gorkhove serial   80-sphere     --    1  14   20gb 24:00 Q   -- \n",
+      "1957955[].fep02 gorkhove serial   82-sphere     --    1  14   20gb 24:00 Q   -- \n",
+      "1957956[].fep02 gorkhove serial   97-sphere     --    1  14   20gb 24:00 Q   -- \n",
+      "1957957[].fep02 gorkhove serial   93-sphere     --    1  14   20gb 24:00 Q   -- \n",
+      "1957958[].fep02 gorkhove serial   89-sphere     --    1  14   20gb 24:00 Q   -- \n",
+      "1957959[].fep02 gorkhove serial   91-sphere     --    1  14   20gb 24:00 Q   -- \n"
+     ]
+    }
+   ],
+   "source": [
+    "!qstat -u gorkhover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
