Tex: continue layout

--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,1 +1,12 @@
-\chapter{Experiment}
+\chapter{Experimental Verification}
+\section{Setup}
+
+\subsection{Imaging the Focus}
+\subsection{Imaging Nanoparticles}
+\subsection{Imaging Crystals}
+
+\section{Results}
+\subsection{Imaging the Focus}
+\subsection{Imaging Nanoparticles}
+\subsection{Imaging Crystals}
+
