--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -265,6 +265,10 @@
 \chapter*{List of abbreviations}
 \begin{acronym}[XXXXX]
 	\acro{CDI}{Coherent Diffractive Imaging}
+	\acro{IDI}{Incoherent Diffractive Imaging}
+	\acro{PS}{Polystyrene}
+	\acro{MMA}{Methylmethacrylate}
+	\acro{EHMA}{Etyhlhexymethacrylate}
 \end{acronym}
 
 \endgroup
