--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -1,1 +1,7 @@
 \chapter{Simulations}
+\section{Single Particles}
+\subsection{Single Sphere}
+\subsection{Multiple Spheres}
+\section{Crystal}
+\section{Signal-to-Noise}
+
