--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -1,4 +1,34 @@
 \chapter{Theory}
+
+\section{Coherence}
+-along Glauber/Statistical Optics Goodman
+
+
+\section{Michealson-Interferometer}
+	\paragraph{First order coherence $g_1(t)$}
+	\paragraph{Second order coherence $g_2(t_1,t_2)$}
+
+
+%-Hanbury Brown and Twist
+\section{Double slit}
+	\paragraph{First order coherence $g_1(x)$}
+	\paragraph{Second order coherence $g_2(x_1,x_2)$}
+\section{Siegert Relation for Pseudo-Thermal Light}
+
+%-Single Photon Emitters/2nd Quant description
+%(siehe Referenzen in Schaller/resonance fluorescence)
+%-Fluorescence g2
+%$2 Level with finite Lifetime -> Spectrum of fluorescence
+\section{X-Ray Fluorescence}
+
+\section{Intensity Correlations using X-Ray Fluorescence}
+\section{Signal to Noise Considerations}
+%- SNR
+%will use Peak/stdev bg definition
+%Which factors influence SNR
+%-lifetime/pulsewidth
+%-sampling conditions
+%-sample thickness
 \label{chap:theory}
 
 
