tex: change citations to english

--- a/Tex/abstract.tex
+++ b/Tex/abstract.tex
@@ -1,6 +1,8 @@
 \pdfbookmark[0]{Abstract}{abstract}
 	\begin{Huge}
 		\textbf{Abstract}\vspace{12mm}
+    %sinnloses zitat damit bibtex nicht meckert TODO: remove
+    \cite{hare1994}
 	\end{Huge}
 \\
  TEXT
