tex: move sample prep to experiment

--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -193,7 +193,7 @@
 \hypersetup{
 	pdfborder={0 0 0}, 
 	bookmarksnumbered=true,
-	pdftitle={Bachelorarbeit},
+	pdftitle={Master Thesis},
 	pdfauthor={Felix Frederik Zimmermann}
 }
 
@@ -307,7 +307,6 @@
 		\let\protect\l@section\protect\l@subsection
 	}
 	\makeatother
-	\input{app_samples}
 	\input{app_code}
 	\addtocontents{toc}{\endgroup}
 \end{appendices}
