--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,5 +1,43 @@
 \chapter{Experimental Verification}
 \section{Setup}
+\section{Sample Preperation}
+Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, Inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  were bought from Sigma Aldrich. The Inhibitor was removed using a prefilled column. 
+2,2 azo-bis-isobutyrylnitrile (AIBN) was used as initiator.
+\subsection{Nanoparticles in Polystyrene Matrix}
+The Nanoparticles were precipitated, centrifuged and redispersed in Chloroform. Polystyrene was dissolved in Chloroform and the Nanoparticles were added (see \fref{tab:samplePS}). After strong sonication using an Ultrasonic probe to ensure dispersion, fractions of the solution were dropped onto glass slides and dried. After drying, the films were carefully removed from the glass slides.
+
+\begin{table}
+	\centering
+	\caption{Nanoparticles in PS recipes}
+	\label{tab:samplePS}
+	\begin{tabular}{lllll}
+		\hline
+	Nanoparticles & Chloroform & Polystyrene & Volume per sample & Name \\
+		\hline
+	  & & & &\\       
+		\hline
+	\end{tabular}
+\end{table}
+
+\subsection{Nanoparticles in Poly(MMA/EHMA)  Matrix}
+
+
+\begin{table}
+	\centering
+	\caption{Nanoparticles in PMMA/EHMA recipes}
+	\label{tab:samplePS}
+	\begin{tabular}{lllll}
+		\hline
+		Nanoparticles & EHMA & MMA & Initiator \\
+		\hline
+		& & & &\\       
+		\hline
+	\end{tabular}
+\end{table}
+
+\subsection{Sample Characterisation}
+\subsection{GaAs crystal films}
+
 
 \subsection{Imaging the Focus}
 \subsection{Imaging Nanoparticles}
