--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -4,16 +4,15 @@
 -along Glauber/Statistical Optics Goodman
 
 
-\section{Michealson-Interferometer}
-	\paragraph{First order coherence $g_1(t)$}
-	\paragraph{Second order coherence $g_2(t_1,t_2)$}
+\paragraph{Michealson-Interferometer}
+\paragraph{First order coherence $g_1(t)$}
+\paragraph{Second order coherence $g_2(t_1,t_2)$}
 
 
 %-Hanbury Brown and Twist
-\section{Double slit}
-	\paragraph{First order coherence $g_1(x)$}
-	\paragraph{Second order coherence $g_2(x_1,x_2)$}
-\section{Siegert Relation for Pseudo-Thermal Light}
+\section{Hanburry Brown Twiss}
+\paragraph{Second order coherence $g_2(x_1,x_2)$}
+\paragraph{Siegert Relation for Pseudo-Thermal Light}
 
 %-Single Photon Emitters/2nd Quant description
 %(siehe Referenzen in Schaller/resonance fluorescence)
@@ -25,10 +24,12 @@
 \section{Signal to Noise Considerations}
 %- SNR
 %will use Peak/stdev bg definition
-%Which factors influence SNR
-%-lifetime/pulsewidth
-%-sampling conditions
-%-sample thickness
+Which factors influence SNR
+-lifetime/pulsewidth
+-sampling conditions
+-sample thickness
+-N images
+-N photons
 \label{chap:theory}
 
 
