add tex output to index.ipynb

--- a/sim/index.ipynb
+++ b/sim/index.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "true"
-   },
+   "metadata": {},
    "source": [
     "### Create new index"
    ]
@@ -1346,6 +1344,70 @@
     "#df=pd.read_pickle('index.pkl')\n",
     "df['result'],df['plot']=zip(*df.progress_apply(result,axis=1))\n",
     "#df.to_pickle('index.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jinja2 import Template\n",
+    "\n",
+    "template = Template(r'''\n",
+    "\\documentclass{article}\n",
+    "\\usepackage[margin=0.7in]{geometry}\n",
+    "\\usepackage[parfill]{parskip}\n",
+    "\\usepackage[utf8]{inputenc}\n",
+    "\\usepackage{booktabs}\n",
+    "\\usepackage{graphicx}\n",
+    "\n",
+    "\\usepackage{amsmath,amssymb,amsfonts,amsthm}\n",
+    "\n",
+    "\\begin{document}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\\section*{Simulation Settings}\n",
+    "{{descr}}\n",
+    "\n",
+    "{{table}}\n",
+    "\n",
+    "\\section*{Plots}\n",
+    "\n",
+    "\n",
+    "{% for image in images %}\n",
+    "\\begin{figure}[h]\n",
+    "\\centering\n",
+    "\\includegraphics[height=5cm]{% raw -%}{{%- endraw %}{{image.file}}{% raw -%}}{%- endraw %}\n",
+    "\\caption{ {{image.caption}} }\n",
+    "\\end{figure}\n",
+    "{% endfor %}\n",
+    "\\end{document}\n",
+    "\n",
+    "''')\n",
+    "from collections import namedtuple\n",
+    "images=[]\n",
+    "for i,row in df.iterrows():\n",
+    "    image=namedtuple('images', ['file', 'caption'])\n",
+    "    if row['simtype']=='multisphere':\n",
+    "        caption=f\"{row['meanSpheres']} x {row['r']}nm-spheres (~{round(row['meanAtomPerSphere'],-2)} atoms each) \\n with {int(row['spacing']*1e3)}nm spacing inside {int(row['fwhmfocal']*1000)}nm focus\"\n",
+    "    elif row['simtype']=='sphere': \n",
+    "        caption=f\"{row['r']}nm-sphere (~{round(row['meanAtomPerSphere'],-2)} atoms)\"\n",
+    "    file=row['plot']\n",
+    "    images.append(image(file=file,caption=caption))\n",
+    "descr='All with 20nm radius, 30cm detector distance, 1024x1024@50um pixels and 6.4keV'\n",
+    "columns=['simtype', 'Natoms', 'spacing', 'fwhmfocal', 'meanAtomPerSphere', 'Nspheres', 'meanSpheres', 'Nimg', 'Nimg_cdi']\n",
+    "tmp=df.copy()\n",
+    "tmp.index+=1\n",
+    "tmp.spacing*=1e-3\n",
+    "tmp.fwhmfocal*=1e-3\n",
+    "tmp.loc[tmp['Nspheres']==np.inf,'Nspheres']=-1\n",
+    "tmp['Nspheres']=tmp['Nspheres'].astype(int)\n",
+    "table=tmp[columns].to_latex(float_format=\"%.1e\")\n",
+    "with open(r\"index.tex\",\"w\") as f:\n",
+    "    f.write(template.render(table=table,images=images,descr=descr))\n",
+    "!xelatex  index.tex 1 >/dev/null"
    ]
   }
  ],
