--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,36 +1,45 @@
 \chapter{Experimental Verification}
 \section{Setup}
 \section{Sample Preperation}
-Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, Inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  were bought from Sigma Aldrich. The Inhibitor was removed using a prefilled column. 
-2,2 azo-bis-isobutyrylnitrile (AIBN) was used as initiator.
+Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, Inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor.  2,2 azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
 \subsection{Nanoparticles in Polystyrene Matrix}
-The Nanoparticles were precipitated, centrifuged and redispersed in Chloroform. Polystyrene was dissolved in Chloroform and the Nanoparticles were added (see \fref{tab:samplePS}). After strong sonication using an Ultrasonic probe to ensure dispersion, fractions of the solution were dropped onto glass slides and dried. After drying, the films were carefully removed from the glass slides.
-
+The nanoparticles were precipitated with MeOH, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the films were carefully removed from the glass slides.
+As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of XXX were dropped onto glass slides and carefully removed after drying.
 \begin{table}
 	\centering
-	\caption{Nanoparticles in PS recipes}
+	\caption{Nanoparticles in Polystyrene recipes}
 	\label{tab:samplePS}
-	\begin{tabular}{lllll}
+	\begin{tabular}{llll}
 		\hline
-	Nanoparticles & Chloroform & Polystyrene & Volume per sample & Name \\
+	NP size&   Volume NP in CF &  Iron Concentration &Volume PS in CF    \\
 		\hline
-	  & & & &\\       
+	  5\,nm&700 ul & & 5\,ml  \\  
+	   10\,nm&  500 ul& &5\,ml  \\    
+	   20\,nm &  425 ul& &5\,ml  \\  
+	   	Control   &  & &5\,ml  \\  
 		\hline
 	\end{tabular}
 \end{table}
 
 \subsection{Nanoparticles in Poly(MMA/EHMA)  Matrix}
-
+As a second nanoparticle in polymer sample, a AIBN initiated Poly(MMA/EHMA) polymerisation with magnetite nanoparticles was performed. 
+The nanoparticle solution was concentrated to XXX in Tolune by precipitation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and toluene 800\,ul of EHMA was added each. After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled with N$_2$  for 10\,min before moving heating it up to XXX using a water bath under weak sonication. The mixture was keept at XXX for XXX.
+The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices using a slow spinning diamond saw.
+As a control sample, the polymerisation was performed without any nanoparticles. 
 
 \begin{table}
 	\centering
 	\caption{Nanoparticles in PMMA/EHMA recipes}
 	\label{tab:samplePS}
-	\begin{tabular}{lllll}
+	\begin{tabular}{llllll}
 		\hline
-		Nanoparticles & EHMA & MMA & Initiator \\
+		NP size &NP in Toluene&Toluene & EHMA & MMA & AIBN \\
 		\hline
-		& & & &\\       
+		5\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
+		10\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
+		10\,nm& & &0\,ul&  4\,ml&   20\,mg    \\
+		20\,nm& & &800\,ul&  3.2\,ml&   20\,mg    \\
+			Control& & 1\,ml&800\,ul&  3.2\,ml&   20\,mg    \\
 		\hline
 	\end{tabular}
 \end{table}
