--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,5 +1,5 @@
 \chapter{Experimental Verification}
-\section{Setup}
+
 \section{Sample Preperation}
 Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, Inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor.  2,2 azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
 \subsection{Nanoparticles in Polystyrene Matrix}
@@ -23,14 +23,14 @@ As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissol
 
 \subsection{Nanoparticles in Poly(MMA/EHMA)  Matrix}
 As a second nanoparticle in polymer sample, a AIBN initiated Poly(MMA/EHMA) polymerisation with magnetite nanoparticles was performed. 
-The nanoparticle solution was concentrated to XXX in Tolune by precipitation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and toluene 800\,ul of EHMA was added each. After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled with N$_2$  for 10\,min before moving heating it up to XXX using a water bath under weak sonication. The mixture was keept at XXX for XXX.
+The nanoparticle solution was concentrated to XXX in Tolune by precipitation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and toluene 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled with N$_2$  for 10\,min before moving heating it up to XXX using a water bath under weak sonication. The mixture was keept at XXX for XXX.
 The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices using a slow spinning diamond saw.
 As a control sample, the polymerisation was performed without any nanoparticles. 
 
 \begin{table}
 	\centering
 	\caption{Nanoparticles in PMMA/EHMA recipes}
-	\label{tab:samplePS}
+	\label{tab:sampleCP}
 	\begin{tabular}{llllll}
 		\hline
 		NP size &NP in Toluene&Toluene & EHMA & MMA & AIBN \\
@@ -47,13 +47,23 @@ As a control sample, the polymerisation was performed without any nanoparticles.
 \subsection{Sample Characterisation}
 \subsection{GaAs crystal films}
 
-
+\section{Setup}
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/setup.pdf}
+	\caption{Schematic of the experimental setup at SACLA}
+\end{figure}
 \subsection{Imaging the Focus}
 \subsection{Imaging Nanoparticles}
 \subsection{Imaging Crystals}
 
 \section{Results}
 \subsection{Imaging the Focus}
+\subsubsection{Filtering}
+
 \subsection{Imaging Nanoparticles}
+\subsubsection{Filtering}
 \subsection{Imaging Crystals}
+\subsubsection{Crystal orientation}
+
 
