--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -48,6 +48,19 @@ Definition of $g_1$
 \begin{equation}
 	g^{(1)}(\vec{r}_1,t_1;\vec{r}_2,t_2= \frac{\left< E^*(\vec{r}_1,t_1)E^*(\vec{r}_2,t_2)E(\vec{r}_1,t_1)E(\vec{r}_2,t_2) \right>}{\left<\left | E(\vec{r}_1,t_1)\right |^2 \right> \left< \left |E(\vec{r}_2,t_2)\right |^2 \right>}	
 \end{equation}
+
+In an interferometer, light coming from a source and a time delayed copy are superposed.
+
+
+For a Lorentzian light source, $<g_1(\tau)>=e^{-|\tau/| \tau_c}$, defining the coherence time $\tau_c$.
+
+ \begin{figure}
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/michelson.pdf}
+	\caption{Schematic of interferometer: Light of (gaussian) a gaussian light source with finite coherence time is split and interference with a delayed copy is observed. The time averaged intensity meassured by an detector changes with the delay time. }
+	\label{fig:michelson}
+\end{figure}
+
 \begin{equation}
 V=\left|g_1\right|
 \end{equation}
