--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -74,7 +74,8 @@
 
 \setlength{\parindent}{0mm}
 
-
+%sans serif
+\renewcommand{\familydefault}{\sfdefault}
 
 %kleiner abstände bei captions
 \setlength{\abovecaptionskip}{10pt plus 3pt minus 2pt}
